# boss_xiangmu

./: CMakeLists.txt  README.md  dingshi.cpp  dingshi.h  dingshi.ui  fanyi.cpp  fanyi.h  fanyi.ui  jisuan.cpp  jisuan.h  jisuan.ui  pro.qrc  pro1.qrc  tianqi.cpp  tianqi.h  tianqi.ui  widget.cpp  widget.h  widget.ui
